# Enedis-data-io

./: .pre-commit-config.yaml  README.md  main.py  makefile  pyproject.toml
enedis_data_io/: en.py  fr.py
enedis_data_io/src/: file_decryption.py  types_helpers.py
enedis_data_io/src/api/: __init__.py  config.py  entreprises.py
test/: test_script.py
