[project]
name = "enedis-data-io"
version = "0.1.1"
description = "Toolbox for manipulating Enedis data"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1, <3.0.0",
    "pycryptodome>=3.23.0, <4.0.0",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.4, <3.0.0",
    "urllib3>=2.5.0, <3.0.0",
]
license = "MIT"
readme = "README.md"
packages = [
    {include = "enedis_data_io"},
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
